--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TEMPLATE</title>
-
+    <title>Barber Shop</title>
+    <link href="https://fonts.googleapis.com/css?family=Volkhov:regular,italic,700,700italic" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Rosario:300,regular,500,600,700,300italic,italic,500italic,600italic,700italic" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
