--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
     @@include("components/_header.html")
 
-    @@include("pages/page-template.html")
+    @@include("pages/page-home.html")
 
     @@include("components/_footer.html")
     @@include("icons/_icons.html")
