--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 
 <body>
     @@include("components/_header.html")
-
     @@include("pages/page-home.html")
+    @@include("components/_gallery.html")
 
     @@include("components/_footer.html")
     @@include("icons/_icons.html")
